[gd_scene load_steps=5 format=3 uid="uid://4wusrim4iklv"]

[ext_resource type="Script" path="res://src/items/cocoon.gd" id="1_cyxa7"]
[ext_resource type="Texture2D" uid="uid://cdcm54c0lia74" path="res://assets/graphics/items/silken_cocoon.png" id="2_f42y5"]
[ext_resource type="Texture2D" uid="uid://btgp7r4bp5bnn" path="res://assets/graphics/lights/silken_point_light.png" id="3_sgdky"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1pmgs"]
radius = 35.0
height = 70.0

[node name="cocoon" type="RigidBody2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource("1_cyxa7")

[node name="capsule_collider" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1pmgs")

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_f42y5")

[node name="area_collect" type="Area2D" parent="."]
collision_layer = 4

[node name="capsule_collider" type="CollisionShape2D" parent="area_collect"]
shape = SubResource("CapsuleShape2D_1pmgs")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 1, 0.780392, 1)
energy = 0.75
texture = ExtResource("3_sgdky")
texture_scale = 0.5

[node name="i_frames" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="area_collect" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="i_frames" to="." method="_on_i_frames_timeout"]
